--- a/MOFAtools/vignettes/MOFA_example_scMT.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_scMT.Rmd
@@ -55,6 +55,7 @@ Next, we define data options. The most important are:
 ```{r}
 DataOptions <- getDefaultDataOptions()
 DataOptions$centerFeatures <- TRUE
+DataOptions
 ```
 
 
@@ -68,7 +69,7 @@ Next, we define model options. The most important are:
 * **sparsity**: do you want to use sparsity? This makes the interpretation easier so it is recommended (Default is `TRUE`).  
 ```{r}
 ModelOptions <- getDefaultModelOptions(MOFAobject)
-ModelOptions$learnIntercept <- FALSE
+ModelOptions
 ```
 
 ### Define training options
@@ -85,6 +86,8 @@ TrainOptions$seed <- 2017
 
 # Automatically drop factors that explain less than 2% of variance in all omics
 TrainOptions$DropFactorThreshold <- 0.02
+
+TrainOptions
 ```
 
 ## Prepare MOFA
