--- a/MOFAtools/vignettes/MOFA_example_scMT.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_scMT.Rmd
@@ -179,7 +179,7 @@ factor1 <- sort(getFactors(MOFAobject,"LF1")[,1])
 order_samples <- names(factor1)
 df <- data.frame(
   row.names = order_samples,
-  culture = MOFAobject@InputData[,order_samples]$culture,
+  culture = InputData(MOFAobject)[,order_samples]$culture,
   factor = factor1
 )
 
@@ -261,7 +261,7 @@ factor2 <- sort(getFactors(MOFAobject,"LF2")[,1])
 order_samples <- names(factor2)
 df <- data.frame(
   row.names = order_samples,
-  culture = MOFAobject@InputData[,order_samples]$culture,
+  culture =  InputData(MOFAobject)[,order_samples]$culture,
   factor = factor2
 )
 plotDataHeatmap(
@@ -302,10 +302,10 @@ plotFactorBeeswarm(
 ## Customized analysis
 For customized exploration of weights and factors, you can directly fetch the variables from the `MOFAobject using 'get' functions: `getWeights`, `getFactors` and `getTrainData`. As an example, here we do a scatterplot between Factor 3 and the true Cellular Detection Rate values
 ```{r, message=FALSE}
-cdr <- colMeans(MOFAobject@TrainData$`RNA expression`>0,na.rm=T)
+cdr <- colMeans(TrainData(MOFAobject)$`RNA expression`>0,na.rm=TRUE)
 factor3 <- getFactors(MOFAobject,
                       factors=3,
-                      include_intercept = F)[,1]
+                      include_intercept = FALSE)[,1]
 
 foo <- data.frame(factor = factor3, cdr = cdr)
 ggplot(foo, aes_string(x = "factor", y = "cdr")) + 
